Atualizando PWA com caminhos corrigidos

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="Pesquisa F.O">
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="manifest.json">
 <title>Pesquisa F.O</title>
-<link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div id="app">
@@ -48,11 +48,11 @@
   </div>
 </div>
 
-<script src="/app.js"></script>
+<script src="app.js"></script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/service-worker.js')
+    navigator.serviceWorker.register('service-worker.js')
       .then(() => console.log('SW registrado'))
       .catch(err => console.log('SW falhou:', err));
   });
