--- a/mapa.html
+++ b/mapa.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="pt-PT">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -51,62 +51,75 @@
 
 <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
 <script>
-  // === Configuração do mapa (satélite HD e rotação livre) ===
+  // === Inicializar mapa satélite híbrido ===
   const map = new maplibregl.Map({
     container: 'map',
-    style: 'https://api.maptiler.com/maps/satellite-hybrid/style.json?key=Cj5w3ovW3aR8RGpiAoug', // 🛰️ Satélite HD com labels
+    style: 'https://api.maptiler.com/maps/hybrid/style.json?key=Cj5w3ovW3aR8RGpiAoug',
     center: [-31.13, 39.454],
     zoom: 14,
-    pitch: 0,                 // vista aérea pura
-    dragRotate: true,         // rotação com dois dedos
-    pitchWithRotate: false,   // sem inclinar
+    pitch: 0,
+    dragRotate: true,
+    pitchWithRotate: false,
+    touchZoomRotate: true,
     attributionControl: true
   });
 
+  // Controlos de navegação (zoom e rotação)
   map.addControl(new maplibregl.NavigationControl({ visualizePitch: false }));
+
+  // Botão para repor orientação norte
+  const btnReset = document.createElement('button');
+  btnReset.textContent = '🔄 Norte para cima';
+  btnReset.style.position = 'absolute';
+  btnReset.style.top = '10px';
+  btnReset.style.right = '10px';
+  btnReset.style.zIndex = '10';
+  btnReset.style.padding = '6px 10px';
+  btnReset.style.background = '#2B2B2B';
+  btnReset.style.color = 'white';
+  btnReset.style.border = 'none';
+  btnReset.style.borderRadius = '6px';
+  btnReset.onclick = () => map.easeTo({ bearing: 0, pitch: 0 });
+  document.body.appendChild(btnReset);
 
   let todosOsMarkers = [];
 
-  // === Carregar e processar o JSON ===
+  // === Carregar Locais etiquetados.json ===
   fetch("Locais etiquetados.json")
     .then(res => res.json())
     .then(data => {
       data.features.forEach(f => {
-        const [lng, lat] = f.geometry.coordinates;
-        const nomeRaw = f.properties.name || "";
-        const nome = nomeRaw.trim(); // remove espaços invisíveis
-        const address = (f.properties.address || "").trim();
-        const tipo = nome.toLowerCase().includes("jfo") ? "jfo" : "pdo";
-        const color = tipo === "jfo" ? "#00FF00" : "#0080FF";
+        const coords = f.geometry.coordinates;
+        if (!coords || coords.length < 2) return;
 
-        // Cria marcador circular colorido
+        const [lng, lat] = coords;
+        const nome = (f.properties.name || "Sem nome").trim();
+        const tipo = nome.toLowerCase().includes("jfo") ? "jfo" : "pdo";
+        const color = tipo === "jfo" ? "#00FF00" : "#007BFF";
+
+        // Marcador simples
         const el = document.createElement("div");
         el.style.backgroundColor = color;
-        el.style.width = "18px";
-        el.style.height = "18px";
+        el.style.width = "16px";
+        el.style.height = "16px";
         el.style.borderRadius = "50%";
-        el.style.border = "2px solid #fff";
+        el.style.border = "2px solid white";
         el.style.cursor = "pointer";
-        el.title = nome; // mostra o nome no hover
 
-        const popupContent = `
-          <div style="font-family:sans-serif; font-size:14px;">
-            <b>${nome}</b><br>
-            ${address || "<i>Sem morada</i>"}
-          </div>
-        `;
+        const popup = new maplibregl.Popup({ offset: 25 })
+          .setHTML(`<b>${nome}</b>`);
 
         const marker = new maplibregl.Marker(el)
           .setLngLat([lng, lat])
-          .setPopup(new maplibregl.Popup({ offset: 25 }).setHTML(popupContent))
+          .setPopup(popup)
           .addTo(map);
 
         todosOsMarkers.push({ nome, tipo, marker });
       });
     })
     .catch(err => {
-      console.error("Erro ao carregar JSON:", err);
-      alert("Erro ao carregar Locais etiquetados.json");
+      console.error("Erro ao carregar Locais etiquetados.json:", err);
+      alert("Erro ao carregar o ficheiro de locais.");
     });
 
   // === Pesquisa manual ===
@@ -117,10 +130,10 @@
     if (!encontrado) return alert("Local não encontrado!");
     const pos = encontrado.marker.getLngLat();
     map.flyTo({ center: pos, zoom: 17, speed: 0.8 });
-    encontrado.marker.getPopup().addTo(map);
+    encontrado.marker.togglePopup();
   });
 
-  // === Filtro PDO/JFO ===
+  // === Filtro PDO / JFO ===
   document.getElementById("filterSelect").addEventListener("change", (e) => {
     const filtro = e.target.value;
     todosOsMarkers.forEach(({ tipo, marker }) => {
