--- a/mapa.html
+++ b/mapa.html
@@ -6,26 +6,6 @@
 <title>Mapa Locais</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
 <link rel="stylesheet" href="styles.css">
-<style>
-  #map {
-    width: 100%;
-    height: 85vh;
-    border-radius: 8px;
-  }
-  #searchBox {
-    display: flex;
-    gap: 6px;
-    margin-bottom: 8px;
-  }
-  nav {
-    display: flex;
-    gap: 8px;
-    background-color: #2B2B2B;
-    padding: 10px;
-    border-radius: 6px;
-    margin-bottom: 10px;
-  }
-</style>
 </head>
 <body>
 <header>
@@ -50,21 +30,8 @@
 <div id="map"></div>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<!-- Plugin que adiciona suporte a rotação -->
-<script src="https://unpkg.com/leaflet-map-rotate@0.1.1/dist/leaflet-map-rotate.min.js"></script>
-
 <script>
-  // Inicialização do mapa com rotação habilitada
-  const map = L.map('map', {
-    center: [39.454, -31.13],
-    zoom: 13,
-    rotation: 0,          // rotação inicial
-    touchRotate: true,     // permite girar com dois dedos
-    dragging: true,
-    scrollWheelZoom: true
-  });
-
-  // Camada base (OpenStreetMap)
+  const map = L.map('map').setView([39.454, -31.13], 13);
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
     attribution: '© OpenStreetMap'
@@ -72,7 +39,6 @@
 
   let todosOsMarkers = [];
 
-  // Ícones
   const blueIcon = new L.Icon({
     iconUrl: 'https://maps.google.com/mapfiles/ms/icons/blue-dot.png',
     iconSize: [32, 32]
@@ -82,25 +48,22 @@
     iconSize: [32, 32]
   });
 
-  // Carregar ficheiro GeoJSON
   fetch("Locais etiquetados.json")
     .then(res => res.json())
     .then(data => {
       data.features.forEach(f => {
         const [lng, lat] = f.geometry.coordinates;
-        const nome = String(f.properties.name || "Sem nome").trim();
+        const nome = f.properties.name;
+        const address = f.properties.address || "";
         const tipo = nome.toLowerCase().includes("jfo") ? "jfo" : "pdo";
         const icon = tipo === "jfo" ? greenIcon : blueIcon;
 
-        const marker = L.marker([lat, lng], { icon })
-          .bindPopup(`<b>${nome}</b>`);
-
+        const marker = L.marker([lat, lng], { icon }).bindPopup(`<b>${nome}</b><br>${address}`);
         todosOsMarkers.push({ nome, tipo, marker });
         marker.addTo(map);
       });
     });
 
-  // Pesquisa manual
   document.getElementById("btnSearch").addEventListener("click", () => {
     const termo = document.getElementById("searchInput").value.trim().toLowerCase();
     if (!termo) return alert("Escreve o nome do PDO ou JFO.");
@@ -110,7 +73,6 @@
     encontrado.marker.openPopup();
   });
 
-  // Filtro PDO / JFO
   document.getElementById("filterSelect").addEventListener("change", (e) => {
     const filtro = e.target.value;
     todosOsMarkers.forEach(({ tipo, marker }) => {
