--- a/mapa.html
+++ b/mapa.html
@@ -3,79 +3,96 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mapa Locais (Rotação Livre)</title>
+<title>Mapa Locais</title>
 
 <!-- Leaflet -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-<!-- Plugin Leaflet.Rotate -->
-<script src="https://unpkg.com/leaflet-rotate/dist/leaflet-rotate.min.js"></script>
+<!-- MapLibre (para rotação real) -->
+<link href="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css" rel="stylesheet">
+<script src="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js"></script>
+<script src="https://unpkg.com/maplibre-gl-leaflet/leaflet-maplibre-gl.js"></script>
 
+<link rel="stylesheet" href="styles.css">
 <style>
-  html, body {
-    height: 100%;
+  body {
     margin: 0;
+    font-family: system-ui, sans-serif;
   }
-  #map {
-    height: 100%;
-    width: 100%;
+  header {
+    background: #f0f0f0;
+    padding: 8px;
+  }
+  nav button {
+    margin: 4px;
+    padding: 6px 10px;
+    border: none;
+    background: #ddd;
+    border-radius: 6px;
   }
   #searchBox {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 1000;
-    background: white;
-    padding: 6px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    padding: 8px;
+    background: #fff;
+    display: flex;
+    gap: 6px;
+    align-items: center;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+  }
+  #map {
+    height: calc(100vh - 100px);
+    width: 100%;
   }
   input, select, button {
-    margin: 4px;
+    padding: 6px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
   }
-
-  /* Popups com texto preto */
+  /* popup texto preto */
   .leaflet-popup-content {
     color: black !important;
     font-weight: bold;
-    font-size: 15px;
-    text-align: center;
   }
 </style>
 </head>
 <body>
+<header>
+  <nav>
+    <button onclick="window.location.href='index.html'">🏠 Início</button>
+    <button onclick="window.location.href='app.html'">📂 CSV</button>
+    <button onclick="window.location.href='calculadora.html'">🎨 Calculadora</button>
+    <button onclick="window.location.href='mapa.html'">🗺️ Mapa</button>
+  </nav>
+</header>
 
 <div id="searchBox">
-  <input id="searchInput" type="text" placeholder="Ex: PDO1001 ou JFO1001">
+  <input id="searchInput" type="text" placeholder="Ex: PDO1001 ou JFO1001...">
   <select id="filterSelect">
     <option value="todos">Todos</option>
     <option value="pdo">Só PDOs</option>
     <option value="jfo">Só Juntas</option>
   </select>
-  <button id="btnSearch">🔍</button>
+  <button id="btnSearch">Procurar</button>
 </div>
 
 <div id="map"></div>
 
 <script>
-  // Cria o mapa com rotação livre
+  // Cria o mapa Leaflet
   const map = L.map('map', {
     center: [39.454, -31.13],
     zoom: 13,
-    rotate: true,        // ativa rotação
-    touchRotate: true,   // permite girar com dois dedos
-    touchZoom: true,     // zoom com gesto
-    zoomControl: true     // mantém controle de zoom
+    zoomControl: true
   });
 
-  // Camada base
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-    attribution: '© OpenStreetMap'
+  // Adiciona camada MapLibre GL (OpenStreetMap estilo GL)
+  const gl = L.maplibreGL({
+    style: 'https://demotiles.maplibre.org/style.json', // mapa base
+    interactive: true
   }).addTo(map);
 
-  // Ícones personalizados
+  let todosOsMarkers = [];
+
   const blueIcon = new L.Icon({
     iconUrl: 'https://maps.google.com/mapfiles/ms/icons/blue-dot.png',
     iconSize: [32, 32]
@@ -85,9 +102,6 @@
     iconSize: [32, 32]
   });
 
-  let todosOsMarkers = [];
-
-  // Carregar JSON de locais
   fetch("Locais etiquetados.json")
     .then(res => res.json())
     .then(data => {
@@ -97,16 +111,15 @@
         const tipo = nome.toLowerCase().includes("jfo") ? "jfo" : "pdo";
         const icon = tipo === "jfo" ? greenIcon : blueIcon;
 
-        // Popup mostra apenas o nome, em preto
+        // Apenas o nome, texto preto
         const marker = L.marker([lat, lng], { icon })
           .bindPopup(`<div style="color:black;"><b>${nome}</b></div>`);
-
         todosOsMarkers.push({ nome, tipo, marker });
         marker.addTo(map);
       });
     });
 
-  // Pesquisa
+  // Botão de busca
   document.getElementById("btnSearch").addEventListener("click", () => {
     const termo = document.getElementById("searchInput").value.trim().toLowerCase();
     if (!termo) return alert("Escreve o nome do PDO ou JFO.");
@@ -116,7 +129,7 @@
     encontrado.marker.openPopup();
   });
 
-  // Filtro
+  // Filtro de tipo
   document.getElementById("filterSelect").addEventListener("change", (e) => {
     const filtro = e.target.value;
     todosOsMarkers.forEach(({ tipo, marker }) => {
