--- a/mapa.html
+++ b/mapa.html
@@ -9,51 +9,12 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-<!-- MapLibre (para rotação real) -->
+<!-- MapLibre (motor do MapTiler com rotação) -->
 <link href="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css" rel="stylesheet">
 <script src="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js"></script>
 <script src="https://unpkg.com/maplibre-gl-leaflet/leaflet-maplibre-gl.js"></script>
 
 <link rel="stylesheet" href="styles.css">
-<style>
-  body {
-    margin: 0;
-    font-family: system-ui, sans-serif;
-  }
-  header {
-    background: #f0f0f0;
-    padding: 8px;
-  }
-  nav button {
-    margin: 4px;
-    padding: 6px 10px;
-    border: none;
-    background: #ddd;
-    border-radius: 6px;
-  }
-  #searchBox {
-    padding: 8px;
-    background: #fff;
-    display: flex;
-    gap: 6px;
-    align-items: center;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-  }
-  #map {
-    height: calc(100vh - 100px);
-    width: 100%;
-  }
-  input, select, button {
-    padding: 6px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-  }
-  /* popup texto preto */
-  .leaflet-popup-content {
-    color: black !important;
-    font-weight: bold;
-  }
-</style>
 </head>
 <body>
 <header>
@@ -75,24 +36,27 @@
   <button id="btnSearch">Procurar</button>
 </div>
 
-<div id="map"></div>
+<div id="map" style="height: calc(100vh - 130px);"></div>
 
 <script>
-  // Cria o mapa Leaflet
-  const map = L.map('map', {
-    center: [39.454, -31.13],
-    zoom: 13,
-    zoomControl: true
-  });
+  // === CONFIGURAÇÃO DO MAPA ===
+  const map = L.map('map').setView([39.454, -31.13], 13);
 
-  // Adiciona camada MapLibre GL (OpenStreetMap estilo GL)
+  // === MAPA BASE MAPTILER COM ROTAÇÃO, SEM INCLINAÇÃO ===
+  const apiKey = "Cj5w3ovW3aR8RGpiAoug"; // a tua chave MapTiler
   const gl = L.maplibreGL({
-    style: 'https://demotiles.maplibre.org/style.json', // mapa base
-    interactive: true
+    style: `https://api.maptiler.com/maps/streets-v2/style.json?key=${apiKey}`,
+    interactive: true,
+    // Evita inclinação e limita só à rotação
+    maplibreOptions: {
+      dragRotate: true,   // permite girar
+      touchPitch: false,  // desativa inclinação com toque
+      pitchWithRotate: false, // evita inclinar ao girar
+      pitch: 0            // fixa a inclinação em 0
+    }
   }).addTo(map);
 
-  let todosOsMarkers = [];
-
+  // === ÍCONES ===
   const blueIcon = new L.Icon({
     iconUrl: 'https://maps.google.com/mapfiles/ms/icons/blue-dot.png',
     iconSize: [32, 32]
@@ -102,6 +66,9 @@
     iconSize: [32, 32]
   });
 
+  let todosOsMarkers = [];
+
+  // === CARREGAR OS DADOS ===
   fetch("Locais etiquetados.json")
     .then(res => res.json())
     .then(data => {
@@ -111,7 +78,7 @@
         const tipo = nome.toLowerCase().includes("jfo") ? "jfo" : "pdo";
         const icon = tipo === "jfo" ? greenIcon : blueIcon;
 
-        // Apenas o nome, texto preto
+        // Popup só com o nome, texto preto
         const marker = L.marker([lat, lng], { icon })
           .bindPopup(`<div style="color:black;"><b>${nome}</b></div>`);
         todosOsMarkers.push({ nome, tipo, marker });
@@ -119,7 +86,7 @@
       });
     });
 
-  // Botão de busca
+  // === BUSCA ===
   document.getElementById("btnSearch").addEventListener("click", () => {
     const termo = document.getElementById("searchInput").value.trim().toLowerCase();
     if (!termo) return alert("Escreve o nome do PDO ou JFO.");
@@ -129,7 +96,7 @@
     encontrado.marker.openPopup();
   });
 
-  // Filtro de tipo
+  // === FILTRO ===
   document.getElementById("filterSelect").addEventListener("change", (e) => {
     const filtro = e.target.value;
     todosOsMarkers.forEach(({ tipo, marker }) => {
