--- a/mapa.html
+++ b/mapa.html
@@ -3,19 +3,29 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mapa Locais</title>
-
-<!-- Leaflet -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
-<!-- MapLibre + integração Leaflet -->
-<link href="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css" rel="stylesheet">
-<script src="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js"></script>
-<script src="https://unpkg.com/maplibre-gl-leaflet/leaflet-maplibre-gl.js"></script>
-
-<!-- O SEU CSS original -->
+<title>Mapa Interativo FO Flores</title>
+<link rel="stylesheet" href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css">
 <link rel="stylesheet" href="styles.css">
+<style>
+  #map {
+    width: 100%;
+    height: 85vh;
+    border-radius: 8px;
+  }
+  #searchBox {
+    display: flex;
+    gap: 6px;
+    margin-bottom: 8px;
+  }
+  nav {
+    display: flex;
+    gap: 8px;
+    background-color: #2B2B2B;
+    padding: 10px;
+    border-radius: 6px;
+    margin-bottom: 10px;
+  }
+</style>
 </head>
 <body>
 <header>
@@ -37,43 +47,26 @@
   <button id="btnSearch">Procurar</button>
 </div>
 
-<!-- Mantém o layout original -->
-<div id="map" style="height: calc(100vh - 130px);"></div>
+<div id="map"></div>
 
+<script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
 <script>
-  // === CONFIGURAÇÃO DO MAPA ===
-  const map = L.map('map').setView([39.454, -31.13], 13);
-
-  // === MAPA BASE MAPTILER ===
-  const apiKey = "Cj5w3ovW3aR8RGpiAoug"; // sua chave do MapTiler
-
-  const glLayer = L.maplibreGL({
-    style: `https://api.maptiler.com/maps/streets-v2/style.json?key=${apiKey}`,
-    interactive: true,
-    attribution: '© MapTiler © OpenStreetMap contributors'
-  }).addTo(map);
-
-  // Força o mapa a começar sem inclinação
-  glLayer.getMaplibreMap().on('load', () => {
-    const glMap = glLayer.getMaplibreMap();
-    glMap.setPitch(0); // sem inclinação
-    glMap.dragRotate.enable(); // rotação com mouse ou toque
-    glMap.touchZoomRotate.enableRotation(); // rotação com dois dedos
+  // Inicializar o mapa sem inclinação
+  const map = new maplibregl.Map({
+    container: 'map',
+    style: 'https://api.maptiler.com/maps/hybrid/style.json?key=Cj5w3ovW3aR8RGpiAoug',
+    center: [-31.13, 39.454],
+    zoom: 13,
+    pitch: 0, // Sem inclinação
+    bearing: 0, // Rotação inicial
+    attributionControl: true
   });
 
-  // === ÍCONES ===
-  const blueIcon = new L.Icon({
-    iconUrl: 'https://maps.google.com/mapfiles/ms/icons/blue-dot.png',
-    iconSize: [32, 32]
-  });
-  const greenIcon = new L.Icon({
-    iconUrl: 'https://maps.google.com/mapfiles/ms/icons/green-dot.png',
-    iconSize: [32, 32]
-  });
+  map.addControl(new maplibregl.NavigationControl());
 
   let todosOsMarkers = [];
 
-  // === CARREGAR JSON ===
+  // Carregar locais do JSON
   fetch("Locais etiquetados.json")
     .then(res => res.json())
     .then(data => {
@@ -81,32 +74,41 @@
         const [lng, lat] = f.geometry.coordinates;
         const nome = f.properties.name;
         const tipo = nome.toLowerCase().includes("jfo") ? "jfo" : "pdo";
-        const icon = tipo === "jfo" ? greenIcon : blueIcon;
+        const color = tipo === "jfo" ? "lime" : "dodgerblue";
 
-        // Popup só com nome (em preto)
-        const marker = L.marker([lat, lng], { icon })
-          .bindPopup(`<div style="color:black;"><b>${nome}</b></div>`);
+        const el = document.createElement('div');
+        el.style.backgroundColor = color;
+        el.style.width = '16px';
+        el.style.height = '16px';
+        el.style.borderRadius = '50%';
+        el.style.border = '2px solid white';
+
+        const marker = new maplibregl.Marker(el)
+          .setLngLat([lng, lat])
+          .setPopup(new maplibregl.Popup().setHTML(`<b style="color:black">${nome}</b>`)) // Apenas nome em preto
+          .addTo(map);
+
         todosOsMarkers.push({ nome, tipo, marker });
-        marker.addTo(map);
       });
     });
 
-  // === PESQUISA ===
+  // Pesquisa
   document.getElementById("btnSearch").addEventListener("click", () => {
     const termo = document.getElementById("searchInput").value.trim().toLowerCase();
     if (!termo) return alert("Escreve o nome do PDO ou JFO.");
     const encontrado = todosOsMarkers.find(m => m.nome.toLowerCase().includes(termo));
     if (!encontrado) return alert("Local não encontrado!");
-    map.flyTo(encontrado.marker.getLatLng(), 17);
-    encontrado.marker.openPopup();
+    const pos = encontrado.marker.getLngLat();
+    map.flyTo({ center: pos, zoom: 17, speed: 0.8 });
+    encontrado.marker.togglePopup();
   });
 
-  // === FILTRO ===
+  // Filtro
   document.getElementById("filterSelect").addEventListener("change", (e) => {
     const filtro = e.target.value;
     todosOsMarkers.forEach(({ tipo, marker }) => {
-      if (filtro === "todos" || filtro === tipo) map.addLayer(marker);
-      else map.removeLayer(marker);
+      if (filtro === "todos" || filtro === tipo) marker.addTo(map);
+      else marker.remove();
     });
   });
 </script>
