--- a/mapa.html
+++ b/mapa.html
@@ -57,16 +57,18 @@
     style: 'https://api.maptiler.com/maps/hybrid/style.json?key=Cj5w3ovW3aR8RGpiAoug',
     center: [-31.13, 39.454],
     zoom: 13,
-    pitch: 0, // Sem inclinação
-    bearing: 0, // Rotação inicial
+    pitch: 0, // Inclinação removida
+    bearing: 0,
     attributionControl: true
   });
 
+  // Controles de navegação (zoom, rotação)
   map.addControl(new maplibregl.NavigationControl());
 
+  // Lista global de marcadores
   let todosOsMarkers = [];
 
-  // Carregar locais do JSON
+  // Carregar locais do ficheiro JSON
   fetch("Locais etiquetados.json")
     .then(res => res.json())
     .then(data => {
@@ -76,6 +78,7 @@
         const tipo = nome.toLowerCase().includes("jfo") ? "jfo" : "pdo";
         const color = tipo === "jfo" ? "lime" : "dodgerblue";
 
+        // Cria marcador colorido
         const el = document.createElement('div');
         el.style.backgroundColor = color;
         el.style.width = '16px';
@@ -83,16 +86,20 @@
         el.style.borderRadius = '50%';
         el.style.border = '2px solid white';
 
+        // Popup mostrando apenas o nome em preto
+        const popup = new maplibregl.Popup({ closeButton: true })
+          .setHTML(`<div style="color: black;"><b>${nome}</b></div>`);
+
         const marker = new maplibregl.Marker(el)
           .setLngLat([lng, lat])
-          .setPopup(new maplibregl.Popup().setHTML(`<b style="color:black">${nome}</b>`)) // Apenas nome em preto
+          .setPopup(popup)
           .addTo(map);
 
         todosOsMarkers.push({ nome, tipo, marker });
       });
     });
 
-  // Pesquisa
+  // 🔍 Pesquisa manual
   document.getElementById("btnSearch").addEventListener("click", () => {
     const termo = document.getElementById("searchInput").value.trim().toLowerCase();
     if (!termo) return alert("Escreve o nome do PDO ou JFO.");
@@ -103,7 +110,7 @@
     encontrado.marker.togglePopup();
   });
 
-  // Filtro
+  // 🎚️ Filtro de tipo
   document.getElementById("filterSelect").addEventListener("change", (e) => {
     const filtro = e.target.value;
     todosOsMarkers.forEach(({ tipo, marker }) => {
